<resources>
    <string name="app_name">College Street</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="btn_lbl_login">LOGIN</string>
    <string name="don_t_have_an_account">Dont have an account</string>
    <string name="register"><u>REGISTER</u></string>


    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Conditions </u></string>
    <string name="btn_lbl_register">REGISTER</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>LOGIN</u></string>


    <string name="err_msg_enter_first_name">Please enter your first name.</string>
    <string name="err_msg_enter_last_name">Please enter your last name.</string>
    <string name="err_msg_enter_email">Please enter your email ID.</string>
    <string name="err_msg_enter_password">Please enter your password.</string>
    <string name="err_msg_enter_confirm_password">Please enter your confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">OOPs! Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree to the terms and condition.</string>
    <string name="err_msg_password_length">Password should be more than 6 characters</string>
    <string name="err_msg_enter_mobile_number">Enter your mobile number</string>
    <string name="err_msg_enter_fav_book">Enter your favourite type of books</string>
    <string name="err_msg_enter_website">Enter your website domain</string>
    <string name="err_msg_mobile_length">Mobile number should be 10 digits</string>


    <string name="please_wait">Loading Please Wait</string>


    <string name="title_forgot_password">Forgot Password</string>
    <string name="btn_lbl_submit">SUBMIT</string>
    <string name="forgot_password_descriptions">Check your email once clicked submit and re-submit your new password</string>


    <string name="title_complete_profile">CREATE YOUR PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">SAVE</string>
    <string name="et_hint_fav_book">Your Favourite type of books</string>
    <string name="et_hint_profession">Your professional status</string>
    <string name="et_hint_website">Your website</string>
    <string name="rb_lbl_student">STUDENT</string>
    <string name="rb_lbl_employed">EMPLOYED</string>
    <string name="title_edit_profile">EDIT PROFILE</string>

    <string name="msg_profile_update_success">Profile Updated Successfully</string>
    <string name="double_click">Back press again if you want to exit</string>
    <string name="title_home">Dashboard</string>
    <string name="title_dashboard">Product</string>
    <string name="title_notifications">Order</string>

    <string name="action_settings">Settings</string>
    <string name="title_settings">SETTINGS</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">LOGOUT</string>

    <string name="title_add_product">ADD BOOK</string>
    <string name="et_hint_product_title">Book Title</string>
    <string name="et_hint_product_price">Book Price (Rs)</string>
    <string name="et_hint_product_description">Book Description</string>
    <string name="et_hint_product_quantity">Book Quantity</string>
    <string name="et_hint_product_author">Book Author</string>

    <string name="err_msg_select_product_image">Please select book image.</string>
    <string name="err_msg_enter_product_title">Please enter book title.</string>
    <string name="err_msg_enter_product_price">Please enter book price.</string>
    <string name="err_msg_enter_product_description">Please enter book description.</string>
    <string name="err_msg_enter_product_quantity">Please enter book quantity.</string>
    <string name="err_msg_enter_product_author">Please enter book author</string>
    <string name="err_msg_product_quantity_length">Book Quantity should be atleast 1</string>

    <string name="no_products_added_yet">No books added yet please add your book</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_dashboard_item_found">No items found</string>

    <string name="product_delete_success_message">Your book is deleted successfully.</string>
    <string name="delete_dialog_title">DELETE</string>
    <string name="delete_dialog_message">Are you sure you want to delete the book?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_product_details">BOOK DETAILS</string>
    <string name="lbl_product_description">Book Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>

    <string name="err_msg_enter_review_description">Please enter book review text</string>

    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No book found!</string>
    <string name="lbl_subtotal">Price Total</string>
    <string name="lbl_shipping_charge">Tax 18%</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>

    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Book removed successfully.</string>

    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>

    <string name="title_address_list">ADDRESS</string>
    <string name="no_address_found">No Address Added!</string>
    <string name="lbL_add_address">Add Address</string>

    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>


    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>

    <string name="err_your_address_added_successfully">Your address is added successfully.</string>

    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>

    <string name="err_your_address_deleted_successfully">Your address is deleted successfully.</string>

    <string name="title_select_address">SELECT ADDRESS</string>

    <string name="dialogTitle">ENCRYPTION</string>
    <string name="dialogMessage">Your address is end-to-end encrypted using cryptography AES technology</string>

    <string name="title_checkout">BILLING</string>
    <string name="checkout_lbl_product_items">Book Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Book Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">(COD) Cash On Delivery</string>
    <string name="btn_lbl_place_order">ORDER BOOK</string>

    <string name="title_my_order_details">ORDERS</string>
    <string name="order_details_lbl">Book Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>

    <string name="title_sold_products">Sold Books</string>
    <string name="no_products_sold_out_yet">No books sold out yet!</string>

    <string name="title_sold_product_details">SOLD BOOKS DETAILS</string>
    <string name="title_activity_maps">Map</string>

    <string name="err_msg_enter_search">Enter text to search</string>

    <string name="title_add_blog_review">ADD BOOK BLOG</string>
    <string name="et_hint_blog_review_title">Enter Blog Title</string>
    <string name="et_hint_blog_review_description">Enter Blog/Review Description</string>
    <string name="err_msg_select_blog_review_image">Please enter book blog image</string>
    <string name="err_msg_enter_blog_review_title">Please enter blog/review title</string>
    <string name="err_msg_enter_blog_review_description">Please enter blog description</string>
    <string name="lbl_my_review">My Blogs</string>
    <string name="title_blog_review_nav">Blogs</string>

    <string name="err_msg_enter_send">Please enter a message</string>


</resources>