<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="live.nirmalyasaha.me.bookstore.activities.ui.fragment.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="live.nirmalyasaha.me.bookstore.activities.ui.fragment.ProductFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fargment_product" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="live.nirmalyasaha.me.bookstore.activities.ui.fragment.WishlistFragment"
        android:label="Wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="live.nirmalyasaha.me.bookstore.activities.ui.fragment.OrderFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_sold_books"
        android:name="live.nirmalyasaha.me.bookstore.activities.ui.fragment.SoldBookFragment"
        android:label="@string/title_sold_products"
        tools:layout="@layout/fragment_sold_book" />


</navigation>